@@ -23,8 +23,26 @@ from autopyfactory.info import SiteInfo
 from autopyfactory.info import CloudInfo
 import autopyfactory.utils as utils
 
-import pandaserver.userinterface.Client as Client
+#try:
+#    import pandaclient.Client as Client
+#except:
+#    try:
+#        import pandaserver.userinterface.Client as Client
+#    except:
+#        try:
+#            import userinterface.Client as Client
+#        except:
+#            raise Exception
 
+libs = ("pandaclient.Client", "pandaserver.userinterface.Client", "userinterface.Client")
+for lib in libs:
+    try:
+        Client = __import__(lib, globals(), locals(), ["Client"])
+        break
+    except:
+        pass
+else:
+   raise Exception 
 
 
 class PandaWMSStatusPlugin(threading.Thread, WMSStatusInterface):
